Scroll support for hosted dialogs in VR

Now that VR supports html <select>, we should send scroll events
to dialogs.

Bug: 836292
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I45d44af2069e21bedd0662d3f26ab6c89ff82288
Reviewed-on: https://chromium-review.googlesource.com/1028584
Commit-Queue: Amirhossein Simjour <asimjour@chromium.org>
Reviewed-by: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555454}